src/com.oracle.truffle.vec/src/com/oracle/truffle/vec/parser/generated/VecParser.java
package com.oracle.truffle.parser.generated;
// Generated from Vec.g4 by ANTLR 4.7
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VecParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int UNARY_OP = 1,
      AND = 2,
      DECLAND = 3,
      SIMDDOUBLEFMADD = 4,
      MATMULKERNEL8X16 = 5,
      MATMULKERNEL2X8 = 6,
      GOTOKERNEL8X8 = 7,
      MATMULKERNEL1D2X8 = 8,
      CONVKERNEL = 9,
      IF = 10,
      FOR = 11,
      WHERE = 12,
      IN = 13,
      RANGE = 14,
      DEC = 15,
      LPAREN = 16,
      RPAREN = 17,
      LBRACE = 18,
      RBRACE = 19,
      LBRACKET = 20,
      RBRACKET = 21,
      COMMA = 22,
      LESSTHANOREQUAL = 23,
      GREATERTHANOREQUAL = 24,
      LESSTHAN = 25,
      GREATERTHAN = 26,
      ADDASSIGN = 27,
      SUBASSIGN = 28,
      MULASSIGN = 29,
      PLUS = 30,
      MINUS = 31,
      MULTIPLY = 32,
      MODULO = 33,
      ASSIGN = 34,
      SCOL = 35,
      INT = 36,
      ID = 37,
      STRING = 38,
      WS = 39;
  public static final int RULE_parse = 0,
      RULE_block = 1,
      RULE_stmt = 2,
      RULE_ifStmt = 3,
      RULE_forStmt = 4,
      RULE_assignment = 5,
      RULE_simdDoubleFmadd = 6,
      RULE_matmulKernel8x16 = 7,
      RULE_matmulKernel2x8 = 8,
      RULE_gotoKernel8x8 = 9,
      RULE_convKernel = 10,
      RULE_declarativeLoop = 11,
      RULE_matmulKernel1D2x8 = 12,
      RULE_expr = 13,
      RULE_var = 14,
      RULE_binop = 15,
      RULE_assignop = 16,
      RULE_atom = 17;
  public static final String[] ruleNames = {
    "parse",
    "block",
    "stmt",
    "ifStmt",
    "forStmt",
    "assignment",
    "simdDoubleFmadd",
    "matmulKernel8x16",
    "matmulKernel2x8",
    "gotoKernel8x8",
    "convKernel",
    "declarativeLoop",
    "matmulKernel1D2x8",
    "expr",
    "var",
    "binop",
    "assignop",
    "atom"
  };

  private static final String[] _LITERAL_NAMES = {
    null,
    null,
    "'&&'",
    "'and'",
    "'simdDoubleFmadd'",
    "'matmulKernel8x16'",
    "'matmulKernel2x8'",
    "'gotoKernel8x8'",
    "'matmulKernel1D2x8'",
    "'convKernel'",
    "'if'",
    "'for'",
    "'where'",
    "'in'",
    "'..'",
    null,
    "'('",
    "')'",
    "'{'",
    "'}'",
    "'['",
    "']'",
    "','",
    "'<='",
    "'>='",
    "'<'",
    "'>'",
    "'+='",
    "'-='",
    "'*='",
    "'+'",
    "'-'",
    "'*'",
    "'%'",
    "'='",
    "';'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null,
    "UNARY_OP",
    "AND",
    "DECLAND",
    "SIMDDOUBLEFMADD",
    "MATMULKERNEL8X16",
    "MATMULKERNEL2X8",
    "GOTOKERNEL8X8",
    "MATMULKERNEL1D2X8",
    "CONVKERNEL",
    "IF",
    "FOR",
    "WHERE",
    "IN",
    "RANGE",
    "DEC",
    "LPAREN",
    "RPAREN",
    "LBRACE",
    "RBRACE",
    "LBRACKET",
    "RBRACKET",
    "COMMA",
    "LESSTHANOREQUAL",
    "GREATERTHANOREQUAL",
    "LESSTHAN",
    "GREATERTHAN",
    "ADDASSIGN",
    "SUBASSIGN",
    "MULASSIGN",
    "PLUS",
    "MINUS",
    "MULTIPLY",
    "MODULO",
    "ASSIGN",
    "SCOL",
    "INT",
    "ID",
    "STRING",
    "WS"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "Vec.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public VecParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class ParseContext extends ParserRuleContext {
    public ParseContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_parse;
    }

    public ParseContext() {}

    public void copyFrom(ParseContext ctx) {
      super.copyFrom(ctx);
    }
  }

  public static class ForParseContext extends ParseContext {
    public ForStmtContext forStmt() {
      return getRuleContext(ForStmtContext.class, 0);
    }

    public TerminalNode EOF() {
      return getToken(VecParser.EOF, 0);
    }

    public TerminalNode WS() {
      return getToken(VecParser.WS, 0);
    }

    public ForParseContext(ParseContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterForParse(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitForParse(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitForParse(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class BlockParseContext extends ParseContext {
    public BlockContext block() {
      return getRuleContext(BlockContext.class, 0);
    }

    public TerminalNode EOF() {
      return getToken(VecParser.EOF, 0);
    }

    public TerminalNode WS() {
      return getToken(VecParser.WS, 0);
    }

    public BlockParseContext(ParseContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterBlockParse(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitBlockParse(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitBlockParse(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ParseContext parse() throws RecognitionException {
    ParseContext _localctx = new ParseContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_parse);
    int _la;
    try {
      setState(48);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
        case 1:
          _localctx = new BlockParseContext(_localctx);
          enterOuterAlt(_localctx, 1);
          {
            setState(36);
            block();
            setState(38);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if (_la == WS) {
              {
                setState(37);
                match(WS);
              }
            }

            setState(40);
            match(EOF);
          }
          break;
        case 2:
          _localctx = new ForParseContext(_localctx);
          enterOuterAlt(_localctx, 2);
          {
            setState(42);
            forStmt();
            setState(44);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if (_la == WS) {
              {
                setState(43);
                match(WS);
              }
            }

            setState(46);
            match(EOF);
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class BlockContext extends ParserRuleContext {
    public List<StmtContext> stmt() {
      return getRuleContexts(StmtContext.class);
    }

    public StmtContext stmt(int i) {
      return getRuleContext(StmtContext.class, i);
    }

    public List<TerminalNode> WS() {
      return getTokens(VecParser.WS);
    }

    public TerminalNode WS(int i) {
      return getToken(VecParser.WS, i);
    }

    public BlockContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_block;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterBlock(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitBlock(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitBlock(this);
      else return visitor.visitChildren(this);
    }
  }

  public final BlockContext block() throws RecognitionException {
    BlockContext _localctx = new BlockContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_block);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
        setState(56);
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
        while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            {
              {
                setState(50);
                stmt();
                setState(52);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                  case 1:
                    {
                      setState(51);
                      match(WS);
                    }
                    break;
                }
              }
            }
          }
          setState(58);
          _errHandler.sync(this);
          _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class StmtContext extends ParserRuleContext {
    public StmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_stmt;
    }

    public StmtContext() {}

    public void copyFrom(StmtContext ctx) {
      super.copyFrom(ctx);
    }
  }

  public static class MatmulKernel8x16StatementContext extends StmtContext {
    public MatmulKernel8x16Context matmulKernel8x16() {
      return getRuleContext(MatmulKernel8x16Context.class, 0);
    }

    public TerminalNode SCOL() {
      return getToken(VecParser.SCOL, 0);
    }

    public MatmulKernel8x16StatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).enterMatmulKernel8x16Statement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).exitMatmulKernel8x16Statement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitMatmulKernel8x16Statement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class MatmulKernel1D2x8StatementContext extends StmtContext {
    public MatmulKernel1D2x8Context matmulKernel1D2x8() {
      return getRuleContext(MatmulKernel1D2x8Context.class, 0);
    }

    public TerminalNode SCOL() {
      return getToken(VecParser.SCOL, 0);
    }

    public MatmulKernel1D2x8StatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).enterMatmulKernel1D2x8Statement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).exitMatmulKernel1D2x8Statement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitMatmulKernel1D2x8Statement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class GotoKernel8x8StatementContext extends StmtContext {
    public GotoKernel8x8Context gotoKernel8x8() {
      return getRuleContext(GotoKernel8x8Context.class, 0);
    }

    public TerminalNode SCOL() {
      return getToken(VecParser.SCOL, 0);
    }

    public GotoKernel8x8StatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).enterGotoKernel8x8Statement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).exitGotoKernel8x8Statement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitGotoKernel8x8Statement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class DeclarativeLoopStatementContext extends StmtContext {
    public DeclarativeLoopContext declarativeLoop() {
      return getRuleContext(DeclarativeLoopContext.class, 0);
    }

    public DeclarativeLoopStatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).enterDeclarativeLoopStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).exitDeclarativeLoopStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitDeclarativeLoopStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class MatmulKernel2x8StatementContext extends StmtContext {
    public MatmulKernel2x8Context matmulKernel2x8() {
      return getRuleContext(MatmulKernel2x8Context.class, 0);
    }

    public TerminalNode SCOL() {
      return getToken(VecParser.SCOL, 0);
    }

    public MatmulKernel2x8StatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).enterMatmulKernel2x8Statement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).exitMatmulKernel2x8Statement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitMatmulKernel2x8Statement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class SimdDoubleFmaddStatementContext extends StmtContext {
    public SimdDoubleFmaddContext simdDoubleFmadd() {
      return getRuleContext(SimdDoubleFmaddContext.class, 0);
    }

    public TerminalNode SCOL() {
      return getToken(VecParser.SCOL, 0);
    }

    public SimdDoubleFmaddStatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).enterSimdDoubleFmaddStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener)
        ((VecListener) listener).exitSimdDoubleFmaddStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitSimdDoubleFmaddStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class AssignStatementContext extends StmtContext {
    public AssignmentContext assignment() {
      return getRuleContext(AssignmentContext.class, 0);
    }

    public TerminalNode SCOL() {
      return getToken(VecParser.SCOL, 0);
    }

    public AssignStatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterAssignStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitAssignStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitAssignStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class ForStatementContext extends StmtContext {
    public ForStmtContext forStmt() {
      return getRuleContext(ForStmtContext.class, 0);
    }

    public ForStatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterForStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitForStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitForStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class ConvKernelStatementContext extends StmtContext {
    public ConvKernelContext convKernel() {
      return getRuleContext(ConvKernelContext.class, 0);
    }

    public TerminalNode SCOL() {
      return getToken(VecParser.SCOL, 0);
    }

    public ConvKernelStatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterConvKernelStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitConvKernelStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitConvKernelStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public static class IfStatementContext extends StmtContext {
    public IfStmtContext ifStmt() {
      return getRuleContext(IfStmtContext.class, 0);
    }

    public IfStatementContext(StmtContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterIfStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitIfStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitIfStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final StmtContext stmt() throws RecognitionException {
    StmtContext _localctx = new StmtContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_stmt);
    try {
      setState(83);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
        case 1:
          _localctx = new AssignStatementContext(_localctx);
          enterOuterAlt(_localctx, 1);
          {
            setState(59);
            assignment();
            setState(60);
            match(SCOL);
          }
          break;
        case 2:
          _localctx = new IfStatementContext(_localctx);
          enterOuterAlt(_localctx, 2);
          {
            setState(62);
            ifStmt();
          }
          break;
        case 3:
          _localctx = new ForStatementContext(_localctx);
          enterOuterAlt(_localctx, 3);
          {
            setState(63);
            forStmt();
          }
          break;
        case 4:
          _localctx = new SimdDoubleFmaddStatementContext(_localctx);
          enterOuterAlt(_localctx, 4);
          {
            setState(64);
            simdDoubleFmadd();
            setState(65);
            match(SCOL);
          }
          break;
        case 5:
          _localctx = new MatmulKernel8x16StatementContext(_localctx);
          enterOuterAlt(_localctx, 5);
          {
            setState(67);
            matmulKernel8x16();
            setState(68);
            match(SCOL);
          }
          break;
        case 6:
          _localctx = new MatmulKernel2x8StatementContext(_localctx);
          enterOuterAlt(_localctx, 6);
          {
            setState(70);
            matmulKernel2x8();
            setState(71);
            match(SCOL);
          }
          break;
        case 7:
          _localctx = new MatmulKernel1D2x8StatementContext(_localctx);
          enterOuterAlt(_localctx, 7);
          {
            setState(73);
            matmulKernel1D2x8();
            setState(74);
            match(SCOL);
          }
          break;
        case 8:
          _localctx = new GotoKernel8x8StatementContext(_localctx);
          enterOuterAlt(_localctx, 8);
          {
            setState(76);
            gotoKernel8x8();
            setState(77);
            match(SCOL);
          }
          break;
        case 9:
          _localctx = new ConvKernelStatementContext(_localctx);
          enterOuterAlt(_localctx, 9);
          {
            setState(79);
            convKernel();
            setState(80);
            match(SCOL);
          }
          break;
        case 10:
          _localctx = new DeclarativeLoopStatementContext(_localctx);
          enterOuterAlt(_localctx, 10);
          {
            setState(82);
            declarativeLoop();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class IfStmtContext extends ParserRuleContext {
    public TerminalNode IF() {
      return getToken(VecParser.IF, 0);
    }

    public TerminalNode LPAREN() {
      return getToken(VecParser.LPAREN, 0);
    }

    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public TerminalNode RPAREN() {
      return getToken(VecParser.RPAREN, 0);
    }

    public TerminalNode LBRACE() {
      return getToken(VecParser.LBRACE, 0);
    }

    public BlockContext block() {
      return getRuleContext(BlockContext.class, 0);
    }

    public TerminalNode RBRACE() {
      return getToken(VecParser.RBRACE, 0);
    }

    public List<TerminalNode> WS() {
      return getTokens(VecParser.WS);
    }

    public TerminalNode WS(int i) {
      return getToken(VecParser.WS, i);
    }

    public IfStmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_ifStmt;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterIfStmt(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitIfStmt(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof VecVisitor)
        return ((VecVisitor<? extends T>) visitor).visitIfStmt(this);
      else return visitor.visitChildren(this);
    }
  }

  public final IfStmtContext ifStmt() throws RecognitionException {
    IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_ifStmt);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(86);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == WS) {
          {
            setState(85);
            match(WS);
          }
        }

        setState(88);
        match(IF);
        setState(90);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == WS) {
          {
            setState(89);
            match(WS);
          }
        }

        setState(92);
        match(LPAREN);
        setState(94);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == WS) {
          {
            setState(93);
            match(WS);
          }
        }

        setState(96);
        expr(0);
        setState(98);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == WS) {
          {
            setState(97);
            match(WS);
          }
        }

        setState(100);
        match(RPAREN);
        setState(102);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == WS) {
          {
            setState(101);
            match(WS);
          }
        }

        setState(104);
        match(LBRACE);
        setState(106);
        _errHandler.sync(this);
        switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
          case 1:
            {
              setState(105);
              match(WS);
            }
            break;
        }
        setState(108);
        block();
        setState(109);
        match(RBRACE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ForStmtContext extends ParserRuleContext {
    public TerminalNode FOR() {
      return getToken(VecParser.FOR, 0);
    }

    public TerminalNode LPAREN() {
      return getToken(VecParser.LPAREN, 0);
    }

    public List<AssignmentContext> assignment() {
      return getRuleContexts(AssignmentContext.class);
    }

    public AssignmentContext assignment(int i) {
      return getRuleContext(AssignmentContext.class, i);
    }

    public List<TerminalNode> SCOL() {
      return getTokens(VecParser.SCOL);
    }

    public TerminalNode SCOL(int i) {
      return getToken(VecParser.SCOL, i);
    }

    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public TerminalNode RPAREN() {
      return getToken(VecParser.RPAREN, 0);
    }

    public TerminalNode LBRACE() {
      return getToken(VecParser.LBRACE, 0);
    }

    public BlockContext block() {
      return getRuleContext(BlockContext.class, 0);
    }

    public TerminalNode RBRACE() {
      return getToken(VecParser.RBRACE, 0);
    }

    public List<TerminalNode> WS() {
      return getTokens(VecParser.WS);
    }

    public TerminalNode WS(int i) {
      return getToken(VecParser.WS, i);
    }

    public ForStmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_forStmt;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).enterForStmt(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof VecListener) ((VecListener) listener).exitForStmt(this);
    }
